--- a/about.html
+++ b/about.html
@@ -1,11 +1,30 @@
 ---
 layout: default
 ---
-<div class="container about">
-  <img class="rounded mx-auto d-block" src="/img/about.jpg" alt="about">
-  <h4>Kouyaa</h4>
-  <p>I'm a wannabe front-end developer, I experiment web features here.
-  <br />This blog is basically my cloud notes.
-  <br />Ah, self-introduction is a struggle.</p>
-  <p><i>Only by working continuously.</i></p>
+<div class="container about-container">
+  <div class="row">
+    <div class="col-md-6 col-sm-12">
+      <img class="rounded mx-auto d-block" src="/img/about.jpg" alt="about">
+    </div>
+    <div class="col-md-6 col-sm-12">
+      <h4>About this site</h4>
+      <p>This blog is powered by Jekyll.
+      <br />I experiment web features here, mainly from bootstrap 4.
+      <br />Inspired by websites with great layout and design, I try to make it happen here. No surprise if my blog looks too much and incoherent.
+      <br />My posts are notes for coding, and other stuff that I feel necessary writing down.
+      <br /></p>
+    </div>
+    <div class="col-md-6 col-sm-12">
+      <h4>About me</h4>
+      <p>I'm a wannabe front-end developer. Looking forward to find a relevant job soon.
+      <br />This blog is basically my cloud notes. Writing has such a soothing effect on me, though it doesn't necessary mean I'm good at it.
+      <br />I'm decent with HTML and CSS, need to work it up with Javascript. Also familiar with Python and Linux.
+      <br />I live in Shenzhen, China. I speak Chinese, English, and a little French.
+      <br />Let me know you exist, drop a note at yinkouya@163.com.</p>
+      <p><i>Only by working continuously.</i></p>
+    </div>
+    <div class="col-md-6 col-sm-12">
+      <img class="rounded mx-auto d-block" src="/img/about2.jpg" alt="about2">
+    </div>
+  </div>
 </div>
