--- a/about.html
+++ b/about.html
@@ -2,11 +2,11 @@
 layout: default
 ---
 <div class="container about-container">
-  <div class="row">
+  <div class="row align-items-center">
     <div class="col-md-6 col-sm-12">
       <img class="rounded mx-auto d-block" src="/img/about.jpg" alt="about">
     </div>
-    <div class="col-md-6 col-sm-12">
+    <div class="col-md-6 col-sm-12 about-site">
       <h4>About this site</h4>
       <p>This blog is powered by Jekyll.
       <br />I experiment web features here, mainly from bootstrap 4.
@@ -14,7 +14,7 @@ layout: default
       <br />My posts are notes for coding, and other stuff that I feel necessary writing down.
       <br /></p>
     </div>
-    <div class="col-md-6 col-sm-12">
+    <div class="col-md-6 col-sm-12 about-me">
       <h4>About me</h4>
       <p>I'm a wannabe front-end developer. Looking forward to find a relevant job soon.
       <br />This blog is basically my cloud notes. Writing has such a soothing effect on me, though it doesn't necessary mean I'm good at it.
